@startuml

entity "mon_hoc" as mon_hoc {
	* ma_mon_hoc
	+ ten_mon_hoc
	+ so_tin_chi_ly_thuyet
	+ so_tin_chi_thuc_hanh
}

entity "do_an" as do_an {
	* ma_do_an
	+ ten_do_an
	+ ngay_nop
}

entity "sinh_vien" as sinh_vien {
	* ma_sinh_vien
	+ ho_ten_sinh_vien
	+ dia_chi
	+ so_dien_thoai
}

entity "thuc_hien" as thuc_hien {
}

mon_hoc |o--|{ do_an

sinh_vien |o--|{ thuc_hien

do_an |o--|{ thuc_hien

@enduml